@@ -1,9 +1,10 @@
 VERSION 0.32 (2018-07-??)
   * Handling of errors in running docker commands fixed.
-  * 'docker update' command added which updates all rsuite containers
+  * `docker update` command added which updates all rsuite containers
      to newer versions.
   * `docker build` caches project environment. It speeds up zip building
      process a lot as dependencies from cache need not compilation.
+  * `tmpl get` renamed to `tmpl list`
 
 VERSION 0.31 (2018-07-26)
   * Adapted to new version of RSuite.
